--- a/academic.html
+++ b/academic.html
@@ -84,7 +84,7 @@
       <h1>Academic Work</h1>
       <h3> Expository Papers </h3>
       <ul>
-      <li> <a href="Papers/GaussBonnet.pdf">On Dimension-Free \(L^p\) bounds for Maximal Functions</a>
+      <li> <a href="Papers/JuniorPaper.pdf">On Dimension-Free \(L^p\) bounds for Maximal Functions</a>
       <ul>  
         <li> My junior independent work at Princeton, advised by Assaf Naor.  I wrote an exposition of work of Stein, Bourgain, Carbery, and Muller, on dimension independent estimates for the Hardy-Littlewood maximal function associated to a convex body. </li>
       </ul>
@@ -105,14 +105,14 @@
 
         <li> <a href="https://arxiv.org/abs/2408.09050">On the Density of Low Lying Zeros of a Large Family of Automorphic \(L\)-functions</a> (SMALL REU 2024)
           <ul>  
-            <li> With Tim Cheek, Pico Gilman, and Marie-Hélène Tomé, advised by Steven J. Miller </li>
+            <li> With Tim Cheek, Pico Gilman, and Marie-Hélène Tomé, advised by Steven J. Miller. </li>
             <li> I presented this work with my collaborators at JMM 2025. </li>
           </ul>
         </li>
 
         <li> <a href="https://arxiv.org/abs/2504.08589"> Colorings of Symmetric Unions and Partial Knots</a> (Polymath Jr REU 2022)
           <ul>  
-            <li> A online REU project I worked on the summer before I started at Princeton.  With Ben Clingenpeel, Zongzheng Dai, Gabriel Diraviam, Krishnendu Kar, Ziyun Liu, Teo Miklethun, Haritha Nagampoozhy, Michael Perry, Moses Samuelson-Lynn, Eli Seamans, Ana Wright, Nicole Xie, and Ruiqi Zou, advised by Alexander Zupan   </li>
+            <li> A online REU project I worked on the summer before I started at Princeton.  With Ben Clingenpeel, Zongzheng Dai, Gabriel Diraviam, Krishnendu Kar, Ziyun Liu, Teo Miklethun, Haritha Nagampoozhy, Michael Perry, Moses Samuelson-Lynn, Eli Seamans, Ana Wright, Nicole Xie, and Ruiqi Zou, advised by Alexander Zupan.   </li>
           </ul>
         </li>
 
@@ -122,14 +122,14 @@
 
         <li> <a href="https://arxiv.org/abs/2409.18224"> Lower Order Biases in Moment Expansions of One Parameter Families of Elliptic Curves</a> (SMALL REU 2024)
           <ul>  
-            <li> A computational exploration of the bias conjecture, with Tim Cheek, Pico Gilman, Marie-Hélène Tomé, and Vismay Sharan, advised by Steven J. Miller</li>
+            <li> A computational exploration of the bias conjecture, with Tim Cheek, Pico Gilman, Marie-Hélène Tomé, and Vismay Sharan, advised by Steven J. Miller.</li>
             <li> Check out the code <a href="https://github.com/KareemSaysHi/SMALL2024-Elliptic-Curves">here</a>! </li>
           </ul>
         </li>
 
         <li> <a href="https://arxiv.org/abs/2408.08856"> Variants of Conway Checkers and k-nacci Jumping</a> (SMALL REU 2024)
           <ul>  
-            <li> A fun project on generalizing Conway Checkers! With Glenn Baruda, Joe Cooper, and Raul Marquez, advised by Steven J. Miller </li>
+            <li> A fun project on generalizing Conway Checkers! With Glenn Baruda, Joe Cooper, and Raul Marquez, advised by Steven J. Miller. </li>
           </ul>
         </li>
 
