final updates for today

--- a/fun.html
+++ b/fun.html
@@ -125,7 +125,7 @@
     </div>
     <div class="right-side">
       <h2>Card Memorization</h2>
-      <p> I realized I had no interesting hobbies so I started learning how to speed-memorize a deck of cards!  My current record is 4:53, using the <a href=https://artofmemory.com/blog/pao-system>Person Action Object system</a>.  I also made a little <a href="Memorizer.exe" download>Windows application</a> to time and check an attempt</p>
+      <p> I started learning how to speed-memorize a deck of cards in March of 2025!  My current record is 4:53, using the <a href=https://artofmemory.com/blog/pao-system>Person Action Object system</a>.  I also made a little <a href="Memorizer.exe" download>Windows application</a> to time and check an attempt.</p>
     </div>
   </div>
 
