--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
   <div>
     <div style="position: absolute; right: 15%; top: 250px; transform: translateY(-50%); padding: 10px;">
-      <img src="kareempic.jpg" alt="Picture of me", style="width: 350px; border-radius: 25%;">
+      <img src="kareempic2.jpg" alt="Picture of me", style="width: 350px; border-radius: 25%;">
     </div>
 
     <div style="position: absolute; left: 15%; top: 75px; width: 40%; padding: 10px;">
